use fixed dimensions for width of TOC and body; otherwise lines are too long to read

--- a/doc/common.css
+++ b/doc/common.css
@@ -2,9 +2,10 @@ body {
   font-family: sans-serif;
   line-height: 2em;
 
-  margin-left: 30%;
-  margin-right: 10%;
+  margin-left: 275px;
+  margin-right: 50px;
   margin-bottom: 5em;
+  max-width: 600px;
 }
 
 /* headings */
